grammar.js
    program: $ => seq(
      optional($.hash_bang_line),
      repeat($.statement),
    ),

    //
    // Markup entry point
    //
    // A .uc.tmpl document is a flat sequence of markup nodes: raw
    // text, comment tags, expression tags, statement tags, and the
    // alt-syntax constructs that span multiple tags.
    //
    // Statement tags that contain only simple (non-spanning) code are
    // wrapped in `statement_tag`.  Alt-syntax constructs that span tag
    // boundaries appear directly as markup nodes with explicit tag-open /
    // tag-close fields, giving a pristine tree with no empty-statement noise.
    //
    _markup_node: $ => choice(
      $.raw_text,
      $.expression_tag,
      $.comment_tag,
      $.statement_tag,
      // Alt-syntax constructs that span tag boundaries:
      $.if_alt_statement,
      $.for_alt_statement,
      $.for_in_alt_statement,
      $.while_alt_statement,
      $.function_alt_declaration,
    ),

    // -----------------------------------------------------------------------
    // Simple tag wrappers
    // -----------------------------------------------------------------------

    // A statement_tag wraps non-spanning code: {% stmt; stmt; %}
    hash_bang_line: _ => /#!.*/,

    //
    // Export declarations
    // Ucode export is simpler than JS: no `from`, no namespace re-exports.
    // `export default` always takes an expression (requires trailing semicolon).
    // `export function name() {}` does NOT require a semicolon.
    //

    export_statement: $ => choice(
      seq(
        'export',
        field('clause', $.export_clause),
        $._semicolon,
      ),
      // `export let/const …;` already carries its own terminating semicolon.
      seq(
        'export',
        field('declaration', $.lexical_declaration),
      ),
      // `export function f() {}` requires an explicit trailing `;` in ucode.
      seq(
        'export',
        field('declaration', $.function_declaration),
        ';',
      ),
      seq(
        'export',
        'default',
        field('value', $.expression),
        ';',
      ),
    ),

    export_clause: $ => seq(
      '{',
      commaSep($.export_specifier),
      '}',
    ),

    export_specifier: $ => seq(
      field('name', $._module_export_name),
      optional(seq(
        'as',
        field('alias', $._module_export_name),
      )),
    ),

    _module_export_name: $ => choice(
      $.identifier,
      $.string,
      'default',
    ),

    import_statement: $ => seq(
      'import',
      choice(
        seq(field('clause', $.import_clause), 'from', field('source', $.string)),
        field('source', $.string),
      ),
      $._semicolon,
    ),

    import_clause: $ => choice(
      field('namespace', $.namespace_import),
      field('named', $.named_imports),
      seq(
        field('default', $.identifier),
        optional(seq(
          ',',
          choice(
            field('namespace', $.namespace_import),
            field('named', $.named_imports),
          ),
        )),
      ),
    ),

    namespace_import: $ => seq('*', 'as', $.identifier),

    named_imports: $ => seq(
      '{',
      commaSep($.import_specifier),
      '}',
    ),

    import_specifier: $ => choice(
      field('name', $.identifier),
      seq(
        field('name', $._module_export_name),
        'as',
        field('alias', $.identifier),
      ),
    ),

    //
    // Statements
    //

    expression_statement: $ => seq(
      $._expressions,
      $._semicolon,
    ),

    // `let` declarators may omit the initializer; `const` requires one.
    // ucode rejects `const a;` ("Expecting initializer expression").
    lexical_declaration: $ => choice(
      seq(
        field('kind', 'let'),
        commaSep1($.variable_declarator),
        $._semicolon,
      ),
      seq(
        field('kind', 'const'),
        commaSep1(alias($._const_declarator, $.variable_declarator)),
        $._semicolon,
      ),
    ),

    // Initializer declaration for a C-style for-header. Differs from
    // lexical_declaration in two ucode-faithful ways:
    //   - no trailing `$._semicolon`: the for-header supplies its own literal
    //     `;`, and ucode does NOT insert a semicolon there
    //     (`for (let i = 0⏎i < 3; …)` is an error), and
    //   - `let` only: ucode rejects `const` in a for-header initializer
    //     (`for (const …)` → "Expecting expression"), just as it does for the
    //     for-in target.
    // Aliased back to lexical_declaration in the for-header so the tree node
    // name is unchanged.
    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional($._initializer),
    ),

    _const_declarator: $ => seq(
      field('name', $.identifier),
      $._initializer,
    ),

    statement_block: $ => prec.right(seq(
      '{',
      repeat($.statement),
      '}',
      optional($._automatic_semicolon),
    )),

    // An unbraced control-flow body accepts any statement except a lexical
    // declaration: ucode rejects `if (x) let y = 1;` / `while (c) const z = 1;`
    // ("Expecting expression") but accepts expression statements, `function`
    // declarations and blocks. (The `:`…`endif` alt-syntax body, which is
    // block-like, still allows `let`/`const` and uses `statement` directly.)
    // Mirror `statement` minus `lexical_declaration` — and minus import/export,
    // which ucode allows only at a module's top level (`if (1) import "m";`
    // also errors with "Expecting expression").
    _unbraced_statement: $ => choice(
      $.expression_statement,
      $.function_declaration,
      $.statement_block,

      $.if_statement,
      $.if_alt_statement,
      $.switch_statement,
      $.for_statement,
      $.for_alt_statement,
      $.for_in_statement,
      $.for_in_alt_statement,
      $.while_statement,
      $.while_alt_statement,
      $.try_statement,

      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.empty_statement,
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $._unbraced_statement),
      optional(field('alternative', $.else_clause)),
    )),

    // Alternative colon/endif syntax — two forms:
    //   code form:   if (cond): stmts … endif        (used in program / statement_tag)
    //   markup form: {% if (cond): %} … {% endif %}   (spans tag boundaries in markup)
    //
    // The markup form uses a flat content repeat (_if_markup_node) rather than
    // nested elif/else bodies.  elif_clause_tag and else_alt_clause_tag are pure
    // header tags that appear as regular items inside that repeat.  This avoids
    // the shift/reduce conflict that arises when a nested repeat($._markup_node)
    // can't decide whether statement_tag_open starts another body node or the
    // enclosing end tag.
    for_statement: $ => seq(
      forHeader($),
      field('body', $._unbraced_statement),
    ),

    try_statement: $ => seq(
      'try',
      field('body', $.statement_block),
      field('handler', $.catch_clause),
    ),

    // ucode has no labeled statements, so `break`/`continue` take no label.
    break_statement: $ => seq(
      'break',
      $._semicolon,
    ),

    continue_statement: $ => seq(
      'continue',
      $._semicolon,
    ),

    return_statement: $ => seq(
      'return',
      optional($._expressions),
      $._semicolon,
    ),

    empty_statement: _ => ';',

    //
    // Statement components
    //

    catch_clause: $ => seq(
      'catch',
      optional(seq('(', field('parameter', $.identifier), ')')),
      field('body', $.statement_block),
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expressions,
      ')',
    ),

    //
    // Expressions
    //

    _expressions: $ => choice(
      $.expression,
      $.sequence_expression,
    ),

    call_expression: $ => choice(
      prec('call', seq(
        field('function', $.expression),
        field('arguments', $.arguments),
      )),
      prec('member', seq(
        field('function', $.primary_expression),
        field('optional_chain', $.optional_chain),
        field('arguments', $.arguments),
      )),
    ),

    subscript_expression: $ => prec.right('member', seq(
      field('object', choice($.expression, $.primary_expression)),
      optional(field('optional_chain', $.optional_chain)),
      '[', field('index', $._expressions), ']',
    )),

    // Assignment targets. ucode rejects a parenthesized whole target
    // (`(a) = 1` is "Unexpected token"), so the left-hand side is a plain
    // reference. (An optional chain anywhere in the target — `a?.b = 1` — is
    // also rejected by ucode, but that is a semantic lval check the grammar
    // does not attempt; member/subscript here still permit `?.`.)
    _lhs_expression: $ => choice(
      $.member_expression,
      $.subscript_expression,
      $._identifier,
      alias($._reserved_identifier, $.identifier),
    ),

    assignment_expression: $ => prec.right('assign', seq(
      field('left', $._lhs_expression),
      '=',
      field('right', $.expression),
    )),

    augmented_assignment_expression: $ => prec.right('assign', seq(
      field('left', $._lhs_expression),
      field('operator', choice(
        '+=', '-=', '*=', '/=', '%=', '**=',
        '^=', '&=', '|=', '>>=', '<<=',
        '&&=', '||=', '??=',
      )),
      field('right', $.expression),
    )),

    _initializer: $ => seq(
      '=',
      field('value', $.expression),
    ),

    binary_expression: $ => choice(
      ...[
        ['&&', 'logical_and'],
        ['||', 'logical_or'],
        ['>>', 'binary_shift'],
        ['<<', 'binary_shift'],
        ['&', 'bitwise_and'],
        ['^', 'bitwise_xor'],
        ['|', 'bitwise_or'],
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['%', 'binary_times'],
        ['**', 'binary_exp'],  // left-associative in ucode: 4**3**2 == (4**3)**2
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['==', 'binary_equality'],
        ['===', 'binary_equality'],
        ['!=', 'binary_equality'],
        ['!==', 'binary_equality'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        ['??', 'logical_or'],    // same level as ||, freely mixable
        ['in', 'binary_relation'],
      ].map(([operator, precedence, associativity]) =>
        (associativity === 'right' ? prec.right : prec.left)(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        )),
      ),
    ),

    delete_expression: $ => prec.left('unary_void', seq(
      field('operator', 'delete'),
      field('argument', choice(
        $.member_expression,
        $.subscript_expression,
        $.parenthesized_expression,
      )),
    )),

    // The operand of ++/-- must be an assignable reference: `++5` and `5++`
    // are "Invalid increment/decrement operand" in ucode.
    update_expression: $ => prec.left('update', choice(
      seq(
        field('argument', $._lhs_expression),
        field('operator', choice('++', '--')),
      ),
      seq(
        field('operator', choice('++', '--')),
        field('argument', $._lhs_expression),
      ),
    )),

    function_expression: $ => prec('literal', seq(
      'function',
      field('name', optional($.identifier)),
      $._call_signature,
      field('body', $.statement_block),
    )),

    // Function declaration — brace body or alternative colon/endfunction syntax
    function_declaration: $ => prec.right('declaration', seq(
      'function',
      field('name', $.identifier),
      $._call_signature,
      field('body', choice(
        $.statement_block,
        seq(':', repeat($.statement), 'endfunction'),
      )),
      optional($._automatic_semicolon),
    )),

    _call_signature: $ => field('parameters', $.formal_parameters),

    // A rest element (`...name`) must be the final parameter, and there can be
    // only one.  ucode rejects a rest param followed by anything — including a
    // trailing comma.  A trailing comma is allowed only after plain parameters.
    formal_parameters: $ => seq(
      '(',
      optional(choice(
        $.rest_element,
        seq(commaSep1($.identifier), ',', $.rest_element),
        seq(commaSep1($.identifier), optional(',')),
      )),
      ')',
    ),

    string: $ => choice(
      seq(
        '"',
        repeat(choice(
          alias($.unescaped_double_string_fragment, $.string_fragment),
          $.escape_sequence,
        )),
        '"',
      ),
      seq(
        '\'',
        repeat(choice(
          alias($.unescaped_single_string_fragment, $.string_fragment),
          $.escape_sequence,
        )),
        '\'',
      ),
    ),

    number: _ => {
      const hexDigits = /[\da-fA-F]+/;
      const hexLiteral = seq(choice('0x', '0X'), hexDigits);
      const hexFloat = seq(choice('0x', '0X'), hexDigits, '.', optional(hexDigits));

      const decimalDigits = /\d+/;
      const signedInteger = seq(optional(choice('-', '+')), decimalDigits);
      const exponentPart = seq(choice('e', 'E'), signedInteger);
      const fraction = seq('.', optional(decimalDigits));

      const binaryLiteral = seq(choice('0b', '0B'), /[0-1]+/);
      const octalLiteral = seq(choice('0o', '0O'), /[0-7]+/);

      // Legacy C octal: `0` then octal digits only, no fraction/exponent.
      const legacyOctalLiteral = seq('0', /[0-7]+/);

      const decimalLiteral = choice(
        // No leading zero: 1-9 then optional digits/fraction/exponent.
        seq(/[1-9]/, optional(decimalDigits), optional(fraction), optional(exponentPart)),
        // Leading zero followed by 8 or 9: legacy non-octal decimal.
        seq('0', /[89]/, optional(decimalDigits), optional(fraction), optional(exponentPart)),
        // A lone zero, optionally with a fraction and/or exponent.
        seq('0', optional(choice(seq(fraction, optional(exponentPart)), exponentPart))),
      );

      return token(choice(
        hexFloat,
        hexLiteral,
        decimalLiteral,
        binaryLiteral,
        octalLiteral,
        legacyOctalLiteral,
      ));
    },

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,

    null: _ => 'null',

    // Unlike arrays/objects, ucode call arguments allow neither interior
    // elision (`f(1,,2)`) nor a trailing comma (`f(1,2,)`).
    arguments: $ => seq(
      '(',
      commaSep(choice($.expression, $.spread_element)),
      ')',
    ),
