test/corpus/modules.txt
================================================================================
Named import
================================================================================

import { a, b } from "./mod.uc";

--------------------------------------------------------------------------------

(program
  (import_statement
    clause: (import_clause
      named: (named_imports
        (import_specifier
          name: (identifier))
        (import_specifier
          name: (identifier))))
    source: (string
      (string_fragment))))

================================================================================
Default import
================================================================================

import def from "./mod.uc";

--------------------------------------------------------------------------------

(program
  (import_statement
    clause: (import_clause
      default: (identifier))
    source: (string
      (string_fragment))))

================================================================================
Side-effect import
================================================================================

import "./mod.uc";

--------------------------------------------------------------------------------

(program
  (import_statement
    source: (string
      (string_fragment))))

================================================================================
Import with rename
================================================================================

import { a as x } from "./mod.uc";

--------------------------------------------------------------------------------

(program
  (import_statement
    clause: (import_clause
      named: (named_imports
        (import_specifier
          name: (identifier)
          alias: (identifier))))
    source: (string
      (string_fragment))))

================================================================================
Wildcard import
================================================================================

import * as ns from "./mod.uc";

--------------------------------------------------------------------------------

(program
  (import_statement
    clause: (import_clause
      namespace: (namespace_import
        (identifier)))
    source: (string
      (string_fragment))))

================================================================================
Dynamic import expression — not supported, produces ERROR
================================================================================

let mod = import("./mod.uc");

--------------------------------------------------------------------------------

; `import(...)` as an expression is not valid ucode. Only the static
; statement form `import "mod.uc"` is supported. The `import` keyword
; produces an ERROR node; the parenthesised path is recovered as the
; variable's value.

(program
  (lexical_declaration
    (variable_declarator
      name: (identifier)
      (ERROR)
      value: (parenthesized_expression
        (string
          (string_fragment))))))

================================================================================
Export let
================================================================================

export let x = 1;

--------------------------------------------------------------------------------

(program
  (export_statement
    declaration: (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))))

================================================================================
Export named function (requires trailing semicolon)
================================================================================

export function named() { return 1; };

--------------------------------------------------------------------------------

(program
  (export_statement
    declaration: (function_declaration
      name: (identifier)
      parameters: (formal_parameters)
      body: (statement_block
        (return_statement
          (number))))))

================================================================================
Export default expression (requires trailing semicolon)
================================================================================

export default function() {};

--------------------------------------------------------------------------------

(program
  (export_statement
    value: (function_expression
      parameters: (formal_parameters)
      body: (statement_block))))

================================================================================
Export list
================================================================================

export { a, b };

--------------------------------------------------------------------------------

(program
  (export_statement
    clause: (export_clause
      (export_specifier
        name: (identifier))
      (export_specifier
        name: (identifier)))))

================================================================================
Default and named imports combined
================================================================================

import def, { a } from "./mod.uc";

--------------------------------------------------------------------------------

(program
  (import_statement
    clause: (import_clause
      default: (identifier)
      named: (named_imports
        (import_specifier
          name: (identifier))))
    source: (string
      (string_fragment))))

================================================================================
Export forward declaration — not supported, produces ERROR
================================================================================

export function foo;

--------------------------------------------------------------------------------

; `export function foo;` (forward declaration) is not valid ucode.
; The parser produces an ERROR node and the semicolon becomes an empty_statement.

(program
  (ERROR
    (identifier))
  (empty_statement))

================================================================================
Export with rename
================================================================================

export { a as b };

--------------------------------------------------------------------------------

(program
  (export_statement
    clause: (export_clause
      (export_specifier
        name: (identifier)
        alias: (identifier)))))

================================================================================
Export const
================================================================================

export const x = 1;

--------------------------------------------------------------------------------

(program
  (export_statement
    declaration: (lexical_declaration
      (variable_declarator
        name: (identifier)
        value: (number)))))

================================================================================
Export default non-function expression (requires trailing semicolon)
================================================================================

export default 42;

--------------------------------------------------------------------------------

(program
  (export_statement
    value: (number)))

================================================================================
Export default without semicolon — produces MISSING node
================================================================================

export default 42

--------------------------------------------------------------------------------

; Unlike JS, ucode `export default` has no ASI — a literal ';' is required.
; The parser produces a MISSING ";" node rather than silently accepting a newline.

(program
  (export_statement
    value: (number)
    (MISSING ";")))
